Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error exercitationem, itaque id natus, fugit eveniet velit nulla ipsam dolores accusamus dolorum nesciunt atque! Maiores repudiandae aliquam hic cupiditate, nobis alias.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, magni fugit laboriosam temporibus non accusantium, corporis deleniti consectetur voluptate fugiat voluptates architecto. Consequuntur repudiandae sapiente quaerat iure ex a perspiciatis!</p>
 </body>
 </html>
